--- a/hyperapp/resource/construct_dir.fixtures.resources.yaml
+++ b/hyperapp/resource/construct_dir.fixtures.resources.yaml
@@ -3,6 +3,7 @@
 import:
 - legacy_service:resource_module_factory
 - legacy_type.attribute:attribute
+- legacy_type.command:object_commands_d
 - legacy_type.python_module:python_module
 - resource.marker:marker.module
 associations: []
@@ -12,12 +13,13 @@ definitions:
     module_name: construct_dir.fixtures
     file_name: construct_dir.fixtures.dyn.py
     import_list:
+      htypes.command.object_commands_d: legacy_type.command:object_commands_d
       marker: resource.marker:marker.module
       services.resource_module_factory: legacy_service:resource_module_factory
-  param.construct_dir.dir_t_res_name:
+  param.construct_dir.dir_t:
     _type: legacy_type.attribute:attribute
     object: construct_dir_fixtures.module
-    attr_name: param_construct_dir_dir_t_res_name
+    attr_name: param_construct_dir_dir_t
   param.construct_dir.resource_module:
     _type: legacy_type.attribute:attribute
     object: construct_dir_fixtures.module
