--- a/hyperapp/resource/construct_dir.fixtures.resources.yaml
+++ b/hyperapp/resource/construct_dir.fixtures.resources.yaml
@@ -1,6 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
+- legacy_service:local_types
 - legacy_service:resource_module_factory
 - legacy_type.attribute:attribute
 - legacy_type.command:object_commands_d
@@ -15,6 +16,7 @@ definitions:
     import_list:
       htypes.command.object_commands_d: legacy_type.command:object_commands_d
       marker: resource.marker:marker.module
+      services.local_types: legacy_service:local_types
       services.resource_module_factory: legacy_service:resource_module_factory
   param.construct_dir.dir_t:
     _type: legacy_type.attribute:attribute
@@ -28,6 +30,10 @@ definitions:
     _type: legacy_type.attribute:attribute
     object: construct_dir_fixtures.module
     attr_name: param_construct_dir_target_res_name
+  param.construct_module_dir.custom_types:
+    _type: legacy_type.attribute:attribute
+    object: construct_dir_fixtures.module
+    attr_name: param_construct_module_dir_custom_types
   param.construct_module_dir.resource_module:
     _type: legacy_type.attribute:attribute
     object: construct_dir_fixtures.module
