Update local_server module

--- a/hyperapp/client/local_server.fixtures.resources.yaml
+++ b/hyperapp/client/local_server.fixtures.resources.yaml
@@ -1,19 +1,18 @@
+# Automatically generated file. Do not edit.
+
 import:
 - legacy_type.attribute:attribute
-- legacy_type.call:call
 - legacy_type.python_module:python_module
+- resource.marker:marker.module
+associations: []
 definitions:
-
-  local_server_fixtures_module:
+  local_server_fixtures.module:
     _type: legacy_type.python_module:python_module
-    module_name: local_server_fixtures
+    module_name: local_server.fixtures
     file_name: local_server.fixtures.dyn.py
-    import_list: []
-
-  open_local_server_local_server_ref:
-    _type: legacy_type.call:call
-    function: open_local_server_local_server_ref_attribute
-  open_local_server_local_server_ref_attribute:
+    import_list:
+      marker: resource.marker:marker.module
+  service.local_server_ref:
     _type: legacy_type.attribute:attribute
-    object: local_server_fixtures_module
-    attr_name: open_local_server_local_server_ref
+    object: local_server_fixtures.module
+    attr_name: service_local_server_ref
