--- a/hyperapp/client/local_server.resources.yaml
+++ b/hyperapp/client/local_server.resources.yaml
@@ -1,31 +1,31 @@
 # Automatically generated file. Do not edit.
 
 import:
-- legacy_module.client:local_server
 - legacy_service:local_server_ref
 - legacy_type.attribute:attribute
-- legacy_type.call:call
 - legacy_type.global_command:global_command_association
 - legacy_type.impl:global_command_impl
 - legacy_type.local_server:open_local_server_d
-- legacy_type.partial:partial
+- legacy_type.python_module:python_module
+- resource.global_command_ctr:global_command_ctr.module
 associations:
 - _type: legacy_type.global_command:global_command_association
-  command: open_local_server_command
+  command: open_local_server.command
 definitions:
-  open_local_server_attribute:
+  local_server.module:
+    _type: legacy_type.python_module:python_module
+    module_name: local_server
+    file_name: local_server.dyn.py
+    import_list:
+      global_command_ctr: resource.global_command_ctr:global_command_ctr.module
+      services.local_server_ref: legacy_service:local_server_ref
+  open_local_server:
     _type: legacy_type.attribute:attribute
-    object: legacy_module.client:local_server
+    object: local_server.module
     attr_name: open_local_server
-  open_local_server_command:
+  open_local_server.command:
     _type: legacy_type.impl:global_command_impl
-    function: open_local_server_partial
+    function: open_local_server
     dir: open_local_server_d
   open_local_server_d:
-    _type: legacy_type.call:call
-    function: legacy_type.local_server:open_local_server_d
-  open_local_server_partial:
-    _type: legacy_type.partial:partial
-    function: open_local_server_attribute
-    params:
-      local_server_ref: legacy_service:local_server_ref
+    _type: legacy_type.local_server:open_local_server_d
