--- a/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
+++ b/hyperapp/guesser/test/test_resources/construct_resources_sample.expected.yaml
@@ -15,7 +15,7 @@ import:
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:python_object_association
-- legacy_type.lcs:lcs_set_resource_association
+- legacy_type.lcs:lcs_set_association
 - legacy_type.python_module:python_module
 associations:
 - _type: legacy_type.impl:impl_association
@@ -25,12 +25,12 @@ associations:
 - _type: legacy_type.impl:python_object_association
   t: legacy_type.construct_resources_sample:sample
   function: SampleServant
-- _type: legacy_type.lcs:lcs_set_resource_association
+- _type: legacy_type.lcs:lcs_set_association
   dir:
   - sample_servant_d
   - object_commands_d
   value: sample_servant.open.command
-- _type: legacy_type.lcs:lcs_set_resource_association
+- _type: legacy_type.lcs:lcs_set_association
   dir:
   - sample_servant_d
   - object_commands_d
