--- a/hyperapp/server/server_global_commands.resources.yaml
+++ b/hyperapp/server/server_global_commands.resources.yaml
@@ -13,7 +13,7 @@ import:
 - legacy_type.impl:list_spec
 - legacy_type.impl:method_command_impl
 - legacy_type.impl:python_object_association
-- legacy_type.lcs:lcs_set_resource_association
+- legacy_type.lcs:lcs_set_association
 - legacy_type.python_module:python_module
 - legacy_type.server_global_commands:item
 - legacy_type.server_global_commands:server_global_commands
@@ -27,7 +27,7 @@ associations:
 - _type: legacy_type.impl:python_object_association
   t: legacy_type.server_global_commands:server_global_commands
   function: ServerGlobalCommands
-- _type: legacy_type.lcs:lcs_set_resource_association
+- _type: legacy_type.lcs:lcs_set_association
   dir:
   - server_global_commands_d
   - object_commands_d
