--- a/hyperapp/command_line/construct_resources.resources.yaml
+++ b/hyperapp/command_line/construct_resources.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- legacy_service:resource_module_registry
+- legacy_service:resource_registry
 - legacy_service:register_associations
 - legacy_type.attribute:attribute
 - legacy_type.python_module:python_module
@@ -14,7 +14,7 @@ definitions:
     file_name: construct_resources.dyn.py
     import_list:
       services.construct_resources: guesser.construct_resources:construct_resources
-      services.resource_module_registry: legacy_service:resource_module_registry
+      services.resource_registry: legacy_service:resource_registry
       services.register_associations: legacy_service:register_associations
       meta_registry_association: common.meta_registry_association:meta_registry_association.module
 
