--- a/hyperapp/guesser/custom_resource_module_registry.resources.yaml
+++ b/hyperapp/guesser/custom_resource_module_registry.resources.yaml
@@ -6,7 +6,7 @@ import:
   - legacy_service:local_modules
   - legacy_service:local_types
   - legacy_service:resource_loader
-  - legacy_service:resource_module_registry
+  - legacy_service:resource_registry
   - legacy_service:type_module_loader
   - legacy_type.attribute:attribute
   - legacy_type.python_module:python_module
@@ -30,7 +30,7 @@ definitions:
       services.local_modules: legacy_service:local_modules
       services.local_types: legacy_service:local_types
       services.resource_loader: legacy_service:resource_loader
-      services.resource_module_registry: legacy_service:resource_module_registry
+      services.resource_registry: legacy_service:resource_registry
       services.type_module_loader: legacy_service:type_module_loader
 
   load_custom_resources:
