--- a/hyperapp/server/server_ref_list.yaml
+++ b/hyperapp/server/server_ref_list.yaml
@@ -7,7 +7,7 @@ import:
     server_ref_list:
       - row
 require:
-  - resource_module_registry
+  - resource_registry
   - python_object_creg
   - local_server_ref
   - server_rpc_endpoint
