Resource module: implement setting resource items

--- a/hyperapp/resource/resource_module.yaml
+++ b/hyperapp/resource/resource_module.yaml
@@ -2,8 +2,7 @@ import:
   code:
   - resource.resource_registry
 require:
-- resource_type_reg
-- resource_type_factory
+- resource_type_producer
 - resource_registry
 - python_object_creg
 provide:
